crates/hir-ty/tests/snapshots/jls_definite_assignment__if_then_return_no_else.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 730
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int m(boolean p) {
        int k;
        if (p) {
            k = 1;
            return k;
        }
        return 0;
    }
}

method m(boolean): int
  locals: l0: boolean | l1: int
  exprs: e0: boolean | e1: boolean | e2: int | e3: int | e4: int | e5: int | e6: int
