crates/hir-ty/tests/snapshots/jls_definite_assignment__labeled_break_out_of_switch.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 872
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int m(int i) {
        int k;
        outer: while (true) {
            switch (i) {
                case 1:
                    k = 1;
                    break outer;
                default:
                    k = 2;
                    break;
            }
        }
        return k;
    }
}

method m(int): int
  locals: l0: int | l1: int
  exprs: e0: boolean | e1: boolean | e2: int | e3: int | e4: int | e5: int | e6: int | e7: <error> | e8: int | e9: int | e10: int | e11: int
