crates/hir-ty/tests/snapshots/jls_definite_assignment__loop_may_not_run.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 83
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m(boolean p) {
        int x;
        while (p) {
            x = 1;
        }
        int y = x;
    }
}

method m(boolean): void
  locals: l0: boolean | l1: int | l2: int
  exprs: e0: boolean | e1: boolean | e2: int | e3: int | e4: int | e5: <error>
  diags: e5@8:15: variable-might-not-have-been-initialized: variable 'x' might not have been initialized
