crates/hir-ty/tests/snapshots/jls_definite_assignment__not_swap_guard_assignment.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 365
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int read() { return 0; }

    int m(int v) {
        int k;
        if (!(v > 0 && (k = read()) >= 0))
            return 0;
        return k;
    }
}

method read(): int
  locals: 
  exprs: e0: int
method m(int): int
  locals: l0: int | l1: int
  exprs: e1: int | e2: int | e3: boolean | e4: int | e5: int | e6: int | e7: int | e8: int | e9: boolean | e10: boolean | e11: boolean | e12: boolean | e13: boolean | e14: int | e15: int
