crates/hir-ty/tests/snapshots/jls_definite_assignment__or_both_paths_assign.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 315
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int read() { return 0; }

    int m(int v) {
        int k;
        if ((k = read()) > 0 || (k = read()) >= 0)
            return k;
        return 0;
    }
}

method read(): int
  locals: 
  exprs: e0: int
method m(int): int
  locals: l0: int | l1: int
  exprs: e1: int | e2: int | e3: int | e4: int | e5: int | e6: boolean | e7: int | e8: int | e9: int | e10: int | e11: int | e12: boolean | e13: boolean | e14: boolean | e15: int | e16: int
