crates/hir-ty/tests/snapshots/jls_definite_assignment__or_guard_assignment_red.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 290
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int read() { return 0; }

    int m(int v) {
        int k;
        if (v <= 0 || (k = read()) >= 0)
            return k;
        return 0;
    }
}

method read(): int
  locals: 
  exprs: e0: int
method m(int): int
  locals: l0: int | l1: int
  exprs: e1: int | e2: int | e3: boolean | e4: int | e5: int | e6: int | e7: int | e8: int | e9: boolean | e10: boolean | e11: boolean | e12: <error> | e13: int
  diags: e12@8:19: variable-might-not-have-been-initialized: Variable 'k' might not have been initialized
