crates/hir-ty/tests/snapshots/jls_definite_assignment__switch_expression_definite_assignment.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int m(int kind, java.util.List<String> out) {
        String start;
        java.util.List<String> picked = switch (kind) {
            case 1 -> {
                start = "one";
                yield out;
            }
            default -> {
                start = "rest";
                yield out;
            }
        };
        return start.length() + picked.size();
    }
}

method m(int, java.util.List<java.lang.String>): int
  locals: l0: int | l1: java.util.List<java.lang.String> | l2: java.lang.String | l3: java.util.List<java.lang.String>
  exprs: e0: int | e1: int | e2: java.lang.String | e3: java.lang.String | e4: java.lang.String | e5: java.util.List<java.lang.String> | e6: <error> | e7: java.lang.String | e8: java.lang.String | e9: java.lang.String | e10: java.util.List<java.lang.String> | e11: java.util.List<java.lang.String> | e12: java.lang.String | e13: int | e14: java.util.List<java.lang.String> | e15: int | e16: int
