crates/hir-ty/tests/snapshots/jls_definite_assignment__switch_statement_arm_missing_assignment.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 844
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int m(int i) {
        int k;
        switch (i) {
            case 1:
                k = 1;
                break;
            default:
                break;
        }
        return k;
    }
}

method m(int): int
  locals: l0: int | l1: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: <error> | e6: <error>
  diags: e6@12:15: variable-might-not-have-been-initialized: Variable 'k' might not have been initialized
